--- a/js/dijit/templates/SolarTerminator.html
+++ b/js/dijit/templates/SolarTerminator.html
@@ -1,8 +1,7 @@
 <div class="${theme}" role="presentation">
     <div class="${_css.container}">
-            <div data-dojo-attach-point="_locateNode" role="button" class="${_css.locate}">
-            	<!--span>${_i18n.widgets.locateButton.locate.button}</span -->
-            	<span>solar</span>
+            <div data-dojo-attach-point="_solarNode" role="button" class="${_css.solar}">
+            	<span>${_i18n.widgets.solarTerminatorButton.solarTerminator.button}</span>
             </div>
     </div>
 </div>
