--- a/css/SolarTerminator.css
+++ b/css/SolarTerminator.css
@@ -4,33 +4,29 @@
 
 .SolarButton .zoomSolarButton {
 	padding:2px;
-	width:30px;
-	height:30px;
-	background-color:#666;
-	background-color:rgba(102,102,102,0.80);
+	width:28px;
+	height:28px;
 	-webkit-user-select:none;
 	-moz-user-select:none;
 	-ms-user-select:none;
 	user-select:none;
 	cursor:pointer;
-	-webkit-border-radius:2px;
-	-moz-border-radius:2px;
-	-o-border-radius:2px;
 	border-radius:2px;
-	border: solid 0.1em;
+	border: solid 0.0em;
 	background-image:url(../images/sun.png);
 	background-position:center center;
 	background-repeat:no-repeat;
 }
 
 .SolarButton .zoomSolarButton:hover {
-	background-color:#333;
-	background-color:rgba(102,102,102,0.90);
 	border: solid 0.1em;
-	border-color: green
+	border-color: black;
 }
 
 .SolarButton .zoomSolarButton:active {
-	background-color:#ccc;
-	background-color:rgba(102,102,102,0.60);
+}
+
+.SolarButton .zoomSolarButtonOn {
+	border: solid 0.1em;
+	border-color: black;
 }
